add Christofides algorithm